--- a/i_team.html
+++ b/i_team.html
@@ -72,6 +72,7 @@
 
 
 
+
                 Sailanbayev</a> (1/2019-present)</li>
             <li><a href="https://konstmish.github.io/">Konstantin
                 Mishchenko</a> (9/2017<span class="style1" style="width:
@@ -91,9 +92,11 @@
 
 
 
+
                 Gasanov</a> (9/2018-present)</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kovalev8">Dmitry
+
 
 
 
@@ -118,16 +121,21 @@
 
 
 
+
                 Sailanbayev</a> (8/2017-12/2018)<br>
             </li>
           </ul>
           <h2> Research Interns<br>
           </h2>
           <ul>
+            <li><a href="https://github.com/Selim78">Sélim Chraibi</a>
+              (Grenoble, Rhône-Alpes), 4/2019-present<br>
+            </li>
             <li>Ľudovít Horváth (Comenius University), 2/2019-3/2019 <br>
             </li>
             <li><a
                 href="https://www.researchgate.net/profile/Igor_Sokolov14">Igor
+
 
 
 
@@ -148,6 +156,7 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
@@ -157,10 +166,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -178,10 +189,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -204,6 +217,7 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li>Slavomír Hanzely (Comenius University), 1/2018-2/2018<br>
@@ -215,9 +229,15 @@
           <h2>Visitors<br>
           </h2>
           <ul>
+            <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey
+                Kroshnin</a> (HSE Moscow), 4/2019<br>
+            </li>
+            <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
+                Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li>Dmitry Kamzolov (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a href="https://perso.telecom-paristech.fr/rgower/">Robert
+
 
 
 
@@ -243,11 +263,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -280,9 +302,11 @@
 
 
 
+
                 Gower</a> (Télécom ParisTech), 10/2017<br>
             </li>
             <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita
+
 
 
 
@@ -311,6 +335,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -360,6 +385,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -382,6 +408,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -389,6 +416,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -424,6 +452,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -433,6 +462,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -476,6 +506,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>present)</li>
             <li>current position: PhD student @ Edinburgh</li>
@@ -483,6 +514,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -516,6 +548,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
+
 
 
 
@@ -580,6 +613,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Luo</a> (9/2012<span class="style1" style="width:
                 300px;">–</span>2/2013)</li>
             <li>visiting PhD student from Tsinghua University,
@@ -606,9 +640,11 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -656,12 +692,14 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li>Alexander Banks-Watson (2012), 1st position: <a
                 href="http://www.quintiq.com/">Quintiq</a> (Netherlands)</li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -714,8 +752,10 @@ href="https://www2.warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/pene
 
 
 
+
                 student at Warwick</a> </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
+
 
 
 
@@ -751,9 +791,11 @@ D.
 
 
 
+
                 Ahipasaoglu</a> (LSE / SUTD)</li>
             <li><a
                 href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel
+
 
 
 
@@ -782,8 +824,10 @@ D.
 
 
 
+
                 Bergou</a> (INRA)</li>
             <li><a href="https://sites.google.com/site/armineftekhari/">Armin
+
 
 
 
@@ -812,8 +856,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -847,8 +893,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -865,6 +913,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -897,9 +946,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
