--- a/i_join.html
+++ b/i_join.html
@@ -41,12 +41,18 @@
           anywhere between several weeks to 6 months at KAUST. We have
           several internship programs, including:<br>
           <br>
-          i) <a href="https://vsrp.kaust.edu.sa/Pages/Home.aspx">VSRP</a>
-          3-6 months stay requirement; eligible countries: North
-          America, Europe, Turkey, Russia.<br>
+          <a href="https://vsrp.kaust.edu.sa/Pages/Home.aspx">i) VSRP</a><br>
+          &gt; 3-6 months stay requirement<br>
+          &gt; eligible regions/countries: Europe (this includes Turkey
+          and Russia), North America (USA &amp; Canada), Australasia
+          (Australia &amp; NZ), Latin America, South Korea, Japan,
+          Singapore.
+          <meta charset="utf-8">
           <br>
-          ii) VS 1-6 months stay requirement; eligible countries:
-          All.&nbsp; <br>
+          <br>
+          ii) VS<br>
+          &gt; 1-6 months stay requirement<br>
+          &gt; eligible countries: all.&nbsp; <br>
           <br>
           Should I get interested in your profile, I will direct you to
           the right program.&nbsp; Internships come complete with a
