--- a/i_team.html
+++ b/i_team.html
@@ -45,9 +45,9 @@
             <li><a href="https://qianxunk.github.io">Xun Qian</a>
               (11/2018-present)<br>
             </li>
-            <li><a href="http://maiage.jouy.inra.fr/?q=fr/bergou">El
-                Houcine Bergou</a> (1/2018<span class="style1"
-                style="width: 300px;">-</span>1/2019)<br>
+            <li><a href="https://bergouelhoucine.netlify.com">El Houcine
+                Bergou</a> (1/2018<span class="style1" style="width:
+                300px;">-</span>1/2019)<br>
             </li>
             <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a>
               (5/2017<span class="style1" style="width: 300px;">-present</span>)</li>
@@ -57,23 +57,8 @@
           <ul>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>
               (1/2019-present)</li>
-            <li><a
-                href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                Sailanbayev</a> (1/2019-present)</li>
+            <li><a href="http://www.ali-sa.org/">Alibek Sailanbayev</a>
+              (1/2019-present)</li>
             <li><a href="https://konstmish.github.io/">Konstantin
                 Mishchenko</a> (9/2017<span class="style1" style="width:
                 300px;">-</span>present)</li>
@@ -93,9 +78,11 @@
 
 
 
+
                 Gasanov</a> (9/2018-present)</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kovalev8">Dmitry
+
 
 
 
@@ -108,6 +95,7 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
 
 
@@ -141,10 +129,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -167,10 +157,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -190,10 +182,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -218,6 +212,7 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li>Slavomír Hanzely (Comenius University), 1/2018-2/2018<br>
@@ -230,6 +225,7 @@
           </h2>
           <ul>
             <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey
+
                 Kroshnin</a> (HSE Moscow), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
@@ -237,6 +233,7 @@
             <li>Dmitry Kamzolov (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a href="https://perso.telecom-paristech.fr/rgower/">Robert
+
 
 
 
@@ -264,11 +261,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -303,9 +302,11 @@
 
 
 
+
                 Gower</a> (Télécom ParisTech), 10/2017<br>
             </li>
             <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita
+
 
 
 
@@ -335,6 +336,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -386,6 +388,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -409,6 +412,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -416,6 +420,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -453,6 +458,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -462,6 +468,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -507,6 +514,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>present)</li>
             <li>current position: PhD student @ Edinburgh</li>
@@ -514,6 +522,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -548,6 +557,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
+
 
 
 
@@ -614,6 +624,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Luo</a> (9/2012<span class="style1" style="width:
                 300px;">–</span>2/2013)</li>
             <li>visiting PhD student from Tsinghua University,
@@ -641,9 +652,11 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -693,12 +706,14 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li>Alexander Banks-Watson (2012), 1st position: <a
                 href="http://www.quintiq.com/">Quintiq</a> (Netherlands)</li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -753,8 +768,10 @@ href="https://www2.warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/pene
 
 
 
+
                 student at Warwick</a> </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
+
 
 
 
@@ -792,9 +809,11 @@ D.
 
 
 
+
                 Ahipasaoglu</a> (LSE / SUTD)</li>
             <li><a
                 href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel
+
 
 
 
@@ -825,8 +844,10 @@ D.
 
 
 
+
                 Bergou</a> (INRA)</li>
             <li><a href="https://sites.google.com/site/armineftekhari/">Armin
+
 
 
 
@@ -857,8 +878,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -894,8 +917,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -913,6 +938,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -947,9 +973,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
