--- a/i_team.html
+++ b/i_team.html
@@ -45,9 +45,8 @@
             <li><a href="https://qianxunk.github.io">Xun Qian</a>
               (11/2018-present)<br>
             </li>
-            <li><a href="https://bergouelhoucine.netlify.com">El Houcine
-                Bergou</a> (1/2018<span class="style1" style="width:
-                300px;">-</span>1/2019)<br>
+            <li><a href="https://ehbergou.github.io">El Houcine Bergou</a>
+              (1/2018<span class="style1" style="width: 300px;">-</span>1/2019)<br>
             </li>
             <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a>
               (5/2017<span class="style1" style="width: 300px;">-present</span>)</li>
@@ -79,9 +78,11 @@
 
 
 
+
                 Gasanov</a> (9/2018-present)</li>
             <li><a
                 href="https://www.researchgate.net/profile/Dmitry_Kovalev8">Dmitry
+
 
 
 
@@ -95,6 +96,7 @@
               (8/2017-12/2018)</li>
             <li><a
                 href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek
+
 
 
 
@@ -130,10 +132,12 @@
 
 
 
+
                 Sokolov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard
+
 
 
 
@@ -158,10 +162,12 @@
 
 
 
+
                 Elsukov</a> (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a
                 href="https://www.researchgate.net/profile/Egor_Shulgin">Egor
+
 
 
 
@@ -183,10 +189,12 @@
 
 
 
+
                 Kovalev</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018<br>
             </li>
             <li><a href="https://vcc.kaust.edu.sa/Pages/Gasanov.aspx">Elnur
+
 
 
 
@@ -213,6 +221,7 @@
 
 
 
+
                 Gorbunov</a> (Moscow Institute of Physics and
               Technology), 1/2018-2/2018</li>
             <li>Slavomír Hanzely (Comenius University), 1/2018-2/2018<br>
@@ -226,13 +235,15 @@
           <ul>
             <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey
 
-                Kroshnin</a> (HSE Moscow), 4/2019<br>
+
+                Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 4/2019-5/2019</li>
             <li>Dmitry Kamzolov (Moscow Institute of Physics and
               Technology), 1/2019-2/2019</li>
             <li><a href="https://perso.telecom-paristech.fr/rgower/">Robert
+
 
 
 
@@ -262,11 +273,13 @@
 
 
 
+
                 Möllenhoff</a> (Munich), 8/2018<br>
             </li>
             <li><a href="http://www.maths.ed.ac.uk/%7Es1461357/">Nicolas
                 Loizou</a> (Edinburgh), 1/2018-3/2018</li>
             <li><a href="http://www.damtp.cam.ac.uk/user/me404/">Matthias
+
 
 
 
@@ -303,9 +316,11 @@
 
 
 
+
                 Gower</a> (Télécom ParisTech), 10/2017<br>
             </li>
             <li><a href="https://www.hse.ru/en/staff/nikitadoikov">Nikita
+
 
 
 
@@ -336,6 +351,7 @@
                 Hanzely</a> (Edinburgh), 4/2017-5/2017</li>
             <li><a
 href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCHENKO">Dmitriy
+
 
 
 
@@ -389,6 +405,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
                 Ribeiro</a> (10/2014<span class="style1" style="width:
                 300px;">–</span>3/2015)</li>
             <li>current position: Associate Professor, Federal
@@ -413,6 +430,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
 
 
 
+
               <br>
             </li>
             <li>current position: Assistant Professor, University of
@@ -420,6 +438,7 @@ href="https://www.liglab.fr/en/useful/directory?%20prenom=Dmitry&amp;nom=GRISHCH
           </ul>
           <ul>
             <li><a href="http://perso.telecom-paristech.fr/%7Eofercoq/">Olivier
+
 
 
 
@@ -459,6 +478,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
 
 
 
+
                 Tappenden</a> (2/2012<span class="style1" style="width:
                 300px;">–</span>7/2014)</li>
             <li>current position: Assistant Professor, University of
@@ -468,6 +488,7 @@ href="http://www.canterbury.ac.nz/spark/Researcher.aspx?Researcherid=4085405">Ra
           <ul>
             <li><a
 href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marecek">Jakub
+
 
 
 
@@ -515,6 +536,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Loizou</a> (10/2015<span class="style1" style="width:
                 300px;">–</span>present)</li>
             <li>current position: PhD student @ Edinburgh</li>
@@ -522,6 +544,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.inf.ed.ac.uk/people/students/Theo_Pavlakou.html">Theo
+
 
 
 
@@ -557,6 +580,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
           <ul>
             <li><a
                 href="http://www.maths.ed.ac.uk/people/show?person=417">Dominik
+
 
 
 
@@ -625,6 +649,7 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Luo</a> (9/2012<span class="style1" style="width:
                 300px;">–</span>2/2013)</li>
             <li>visiting PhD student from Tsinghua University,
@@ -653,9 +678,11 @@ href="http://researcher.watson.ibm.com/researcher/view.php?person=ie-jakub.marec
 
 
 
+
                 Pavlakou</a> (2015) - MSc dissertation</li>
             <li><a
 href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
+
 
 
 
@@ -707,12 +734,14 @@ href="http://www.inf.ed.ac.uk/people/students/Georgios_Papamakarios.html">George
 
 
 
+
                 China</a>&nbsp;</li>
             <li>Meensuk Punlavee (2013)&nbsp;</li>
             <li>Alexander Banks-Watson (2012), 1st position: <a
                 href="http://www.quintiq.com/">Quintiq</a> (Netherlands)</li>
             <li><a
                 href="http://scholar.google.com/citations?user=vMMDhTUAAAAJ&amp;hl=en">Christos
+
 
 
 
@@ -769,8 +798,10 @@ href="https://www2.warwick.ac.uk/fac/sci/mathsys/people/students/2014intake/pene
 
 
 
+
                 student at Warwick</a> </li>
             <li><a href="http://www.uclouvain.be/bartosz.filipecki">Bartosz
+
 
 
 
@@ -810,9 +841,11 @@ D.
 
 
 
+
                 Ahipasaoglu</a> (LSE / SUTD)</li>
             <li><a
                 href="https://www.math.uzh.ch/index.php?id=1821&amp;L=1&amp;key1=4980">Michel
+
 
 
 
@@ -845,8 +878,10 @@ D.
 
 
 
+
                 Bergou</a> (INRA)</li>
             <li><a href="https://sites.google.com/site/armineftekhari/">Armin
+
 
 
 
@@ -879,8 +914,10 @@ D.
 
 
 
+
                 Ehrhardt</a> (Cambridge)</li>
             <li><a href="http://www.iam.fmph.uniba.sk/ospm/Harman/">Radoslav
+
 
 
 
@@ -918,8 +955,10 @@ D.
 
 
 
+
                 Nesterov</a> (Louvain)</li>
             <li><a href="https://www.researchgate.net/profile/Tie_Ni">Tie
+
 
 
 
@@ -938,6 +977,7 @@ D.
                 Ni</a> (Liaoning Technical University)</li>
             <li><a
                 href="http://www-syscom.univ-mlv.fr/%7Epesquet/index.htm">Jean-Christophe
+
 
 
 
@@ -974,9 +1014,11 @@ D.
 
 
 
+
                 Stich</a> (Louvain)</li>
             <li><a
 href="https://www.liverpool.ac.uk/mathematical-sciences/staff/tuomo-valkonen/">Tuomo
+
 
 
 
