update, SAGA-AS code

--- a/i_software.html
+++ b/i_software.html
@@ -34,6 +34,15 @@
           <table width="831" border="1">
             <tbody>
               <tr>
+                <td valign="top" align="center"><a
+                    href="https://github.com/QIANXunK/Code_SAGA_AS">SAGA-AS</a><br>
+                </td>
+                <td valign="top">SAGA with arbitrary sampling. Based on
+                  <a href="https://arxiv.org/abs/1901.08669">this ICML
+                    2019 paper</a>.<br>
+                </td>
+              </tr>
+              <tr>
                 <td valign="top" align="center">REX (R Shiny)<br>
                 </td>
                 <td valign="top">Randomized EXchange algorithms,
@@ -44,8 +53,10 @@
 
 
 
+
                     optimal design of experiments</a> and <a
                     href="https://optdesign.shinyapps.io/mvee_rex/">minimum
+
 
 
 
@@ -89,6 +100,7 @@ href="https://perso.telecom-paristech.fr/rgower/software/StochBFGS_dist-0.0.zip"
 
 
 
+
                     paper.</a><br>
                 </td>
               </tr>
@@ -100,6 +112,7 @@ href="https://perso.telecom-paristech.fr/rgower/software/StochBFGS_dist-0.0.zip"
                   randomized methods for solving linear systems.
                   Implemented in MATLAB. <a
                     href="http://epubs.siam.org/doi/abs/10.1137/15M1025487">Related
+
 
 
 
